<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">ExplicitIntents</string>
        <string name="login_label">Login</string>
        <string name="password_label">Password</string>
        <string name="password_repeat">Repeat Password</string>
        <string name="name_label">Name</string>
        <string name="lastname_label">Lastname</string>
        <string name="email_label">Email</string>
        <string name="SignUp_text">Sign Up</string>
        <string name="wrong_credentials">Wrong username or password</string>
        <string name="welcome_text">Welcome</string>
        <string name="error_empty_fields">ERROR: Empty Fields</string>
        <string name="r_btn_fuelstation">Fuel Stations</string>
        <string name="r_btn_eroski">EROSKI Supermarkets</string>
        <string name="r_btn_cinema">Cinemas</string>
        <string name="r_btn_scaperoom">Scape Rooms</string>
        <string name="error_insert">Error: Cant introduce data</string>
        <string name="next_object">Next object</string>
        <string name="click_to_show_objects">Click to show objects</string>
        <string name="limon_url">https://es.wikipedia.org/wiki/Citrus_%C3%97_limon</string>
        <string name="balon_url">https://es.wikipedia.org/wiki/Pelota</string>
        <string name="guitarra_url">https://es.wikipedia.org/wiki/Guitarra</string>
        <string name="lampara_url">https://es.wikipedia.org/wiki/L%C3%A1mpara</string>
        <string name="ordenador_url">https://es.wikipedia.org/wiki/Computadora</string>
        <string name="patata_url">https://es.wikipedia.org/wiki/Solanum_tuberosum</string>
        <string name="raqueta_url">https://es.wikipedia.org/wiki/Raqueta</string>
        <string name="sol_url">https://es.wikipedia.org/wiki/Sol</string>
        <string name="error_image">The app is not showing any image</string>
        </resources>