<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="146dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/name_label"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtLastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />

    <EditText
        android:id="@+id/txtLastname"
        android:layout_width="146dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/lastname_label"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="146dp"
        android:layout_height="44dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/email_label"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="146dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/login_label"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="146dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintVertical_bias="0.352" />

</androidx.constraintlayout.widget.ConstraintLayout>